--- a/styles/gamer-style.css
+++ b/styles/gamer-style.css
@@ -79,9 +79,38 @@ main {
 }
 
 .section {
-    display: flex;
-    align-items: center;
+display: flex;
+gap: 300px;
 }
+
+.heading-3 {
+    color: #0B0223;
+    font-size: 30px;
+    font-weight: 600;
+    padding-top: 100px;
+
+}
+
+.heading-2 {
+    background:linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    font-size: 60px;
+    font-weight: 800;
+    padding-bottom: 10px;
+    margin-top: 5px;
+    margin-bottom: 15px;
+}
+.main-container > ul{
+    padding: 0;
+}
+.main-container li {
+    list-style: none;
+    margin-top: 10px;
+}
+.main-container a{
+    text-decoration: none;
+    color : #3C354F;
+}
+
 .btn-1 {
     border-radius: 48px;
     border: 0;
@@ -89,7 +118,7 @@ main {
     background: #FF42A5;
     padding: 18px 40px;
     margin-right: 10px;
-    
+
 }
 
 .btn-2 {
@@ -98,5 +127,10 @@ main {
     border-radius: 48px;
     border: 0;
     color: #FFF;
-    
+
+}
+
+.image-style {
+    height: 600px;
+    width: 550px;
 }
