--- a/styles/gamer-style.css
+++ b/styles/gamer-style.css
@@ -73,14 +73,15 @@ nav {
 }
 
 /*main section style*/
+
 main {
     max-width: 1200px;
     margin: 0 auto;
 }
 
 .section {
-display: flex;
-gap: 300px;
+    display: flex;
+    gap: 300px;
 }
 
 .heading-3 {
@@ -88,27 +89,31 @@ gap: 300px;
     font-size: 30px;
     font-weight: 600;
     padding-top: 100px;
-
+    margin-bottom: 10px;
 }
 
 .heading-2 {
-    background:linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background: linear-gradient(#F948B2, #8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
     font-size: 60px;
     font-weight: 800;
-    padding-bottom: 10px;
-    margin-top: 5px;
     margin-bottom: 15px;
+    margin-top: 10px;
 }
-.main-container > ul{
+
+.main-container>ul {
     padding: 0;
 }
+
 .main-container li {
     list-style: none;
     margin-top: 10px;
 }
-.main-container a{
+
+.main-container a {
     text-decoration: none;
-    color : #3C354F;
+    color: #3C354F;
 }
 
 .btn-1 {
@@ -133,4 +138,163 @@ gap: 300px;
 .image-style {
     height: 600px;
     width: 550px;
+}
+
+/*section-2 style*/
+
+.game-text {
+    text-align: center;
+    padding-left: 300px;
+}
+
+.span-2 {
+    background: linear-gradient(#F948B2, #8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+}
+
+.paragraph {
+    color: #534C64;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.game-image {
+    display: flex;
+    width: 300px;
+    height: 400px;
+    padding: 0;
+    margin: 0;
+
+}
+
+.oo {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+
+.section-2 {
+    display: block;
+    margin-top: 100px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+/*section online game style*/
+.section-3 {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+    margin-bottom: 20px;
+}
+
+.online-game-div {
+    margin-top: 100px;
+    margin-right: 10px;
+}
+
+/*.overlay-img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}*/
+.heading-1 {
+    text-align: right;
+    font-size: 45px;
+    font-weight: 700;
+    width: 60%;
+    margin-bottom: 10px;
+}
+
+.span-2 {
+    background: linear-gradient(#F948B2, #8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+}
+
+.paragraph-2 {
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    width: 60%;
+}
+
+.image-1 {
+    width: 500px;
+    height: 550px;
+    margin-left: 90px;
+}
+
+.image-2 {
+    width: 250px;
+    height: 300px;
+    position: relative;
+    bottom: 250px;
+}
+
+/*section-4 style*/
+.section-4 img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.img-btn-2 {
+    display: flex;
+    justify-content: center;
+
+}
+
+.btn-3 {
+    padding: 20px;
+    border: 0;
+    color: #0B0223;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 50px;
+    background: #FFF;
+}
+
+.btn-3 {}
+
+/*footer style*/
+.footer {
+    background: #0B0223;
+    width: 100%;
+    height: 600px;
+}
+
+.logo-container-2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-top: 80px;
+}
+
+.logo-container-2 img {
+    width: 80px;
+    height: 40px;
+}
+
+.logo-container-2 h2 {
+    font-size: 40px;
+    margin-left: 10px;
+}
+
+.h2 {
+    color: #FFF;
+}
+
+.para-1 {
+    display: flex;
+    justify-content: center;
+    color: #FFF;
+    gap: 60px;
+    font-size: 18px;
+    font-weight: 600;
 }
