--- a/styles/gamer-style.css
+++ b/styles/gamer-style.css
@@ -188,7 +188,7 @@ main {
     display: flex;
     justify-content: space-between;
     margin-top: 100px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .online-game-div {
@@ -238,28 +238,56 @@ main {
 }
 
 /*section-4 style*/
-.section-4 img {
-    margin-top: 20px;
-    margin-bottom: 20px;
+.section-4{
+    margin-top: 10px;
+    padding-bottom: 100px;
+    padding-top: 0;
+}
+.img-btn-2>button {
+    border-radius: 50px;
+    background: #FFF;
+    width: 250px;
+    height: 80px;
+    border: 0;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.img-btn-2 > img{
+    display: flex;
 }
 
 .img-btn-2 {
     display: flex;
     justify-content: center;
-
+    
 }
-
-.btn-3 {
-    padding: 20px;
-    border: 0;
-    color: #0B0223;
-    font-size: 20px;
-    font-weight: 600;
-    border-radius: 50px;
-    background: #FFF;
-}
-
-.btn-3 {}
+.img-btn-2 button {
+    position: relative;
+    overflow: hidden;
+    background-color:transparent;
+    border:0;
+    padding: 0;
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
+  
+  .img-btn-2 button img {
+    display: block;
+    
+     transition: opacity 0.3s;
+  }
+  
+  .img-btn-2 button:hover {
+    transform: translateY(-5px);
+    border: 2px solid  #FF42A5;
+    color: #FF42A5;
+  }
+  
+  .img-btn-2 button:hover img {
+    opacity: 0.8;
+  }
+  
 
 /*footer style*/
 .footer {
@@ -297,4 +325,33 @@ main {
     gap: 60px;
     font-size: 18px;
     font-weight: 600;
+}
+
+.anchor-img {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-top: 40px;
+
+}
+
+.para-2 {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+    padding-top: 50px;
+}
+
+.para-3 {
+    color: rgba(255, 255, 255, 0.60);
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 16px;
+    font-weight: 500;
+    padding-top: 18px;
 }
