--- a/styles/media.css
+++ b/styles/media.css
@@ -1,10 +1,23 @@
  @media screen and (max-width:576px) {
+    .logo-container{
+        margin-right: 50px;
+    }
     .nav-container{
-     
+        
        flex-direction: column; 
     }
-  .nav, nav-items-container{
-    flex-direction: column; 
+  .nav-items-container{
+    flex-direction: column;
+    margin-left: 100px;
+    margin-right: 40px; 
   }
-   
+  .nav-items-container a{
+    margin-top: 20px;
+    flex-direction: column;
+    gap: 10px;
+
+  }
+   .nav-items-container-2{
+    margin-top: 40px;
+   }
  }
