--- a/styles/gamer-style.css
+++ b/styles/gamer-style.css
@@ -172,8 +172,46 @@ main {
  .oo {
     display: inline-block;
     margin-right: 20px;
+    position: relative;
 }
-
+.oo .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+    border-radius: 16px;
+  }
+  
+  .oo:hover img {
+    opacity: 0.8;
+  }
+  
+  .oo:hover .overlay {
+    opacity: 1;
+  }
+  
+  .oo .overlay .overlay-2 {
+    text-align: center;
+  }
+  
+  .oo .overlay .overlay-2 img {
+    width: 50px; 
+    height: auto; 
+  }
+  
+  .oo .overlay .overlay-2 .overlay-text {
+    color: pink; 
+    font-size: 16px;
+    margin-top: 10px;
+  }
+  
 
 .section-2 {
     display: block;
@@ -183,39 +221,7 @@ main {
     text-align: center;
 }
 
-.oo .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-}
-
-.oo:hover img {
-    opacity: 0.8;
-}
-
-.oo:hover .overlay {
-    opacity: 1;
-}
-
-.oo .overlay img {
-    width: 50px;
-    height: 50px;
-}
-
-.oo .overlay-text {
-    color: pink;
-    margin-top: 10px;
-    font-size: 16px;
-}
 
 /*section online game style*/
 .section-3 {
