--- a/styles/gamer-style.css
+++ b/styles/gamer-style.css
@@ -161,11 +161,12 @@ main {
 }
 
 .game-image {
+   
     display: flex;
     width: 300px;
     height: 400px;
-    padding: 0;
-    margin: 0;
+    padding-right: 300px;
+    margin-right: 200px;
 
 }
 
@@ -186,6 +187,7 @@ main {
     align-items: center;
     opacity: 0;
     transition: opacity 0.3s;
+    border:5px solid #FF42A5;
     border-radius: 16px;
   }
   
@@ -219,9 +221,12 @@ main {
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin: 0 auto;
 }
 
-
+.section-2{
+    margin-right: 300px;
+}
 
 /*section online game style*/
 .section-3 {
