--- a/styles/media.css
+++ b/styles/media.css
@@ -1,26 +1,39 @@
  @media screen and (max-width:576px) {
     .logo-container{
-        margin-right: 50px;
+        margin-right: 30px;
     }
-    .nav-container{
+    .nav-container , .game-image , .section-3 , .img-btn-2 ,
+     .logo-container-2 {
         
        flex-direction: column; 
     }
   .nav-items-container{
     flex-direction: column;
-    margin-left: 100px;
-    margin-right: 40px; 
+    margin-left: 50px;
+    margin-right: 50px; 
+    gap: 50px;
   }
   .nav-items-container a{
     margin-top: 20px;
     flex-direction: column;
-    gap: 10px;
 
   }
    .nav-items-container-2{
     margin-top: 40px;
+    margin-right: 0;
    }
    .section{
     flex-direction: column;
+    gap: 50px;
    }
- }
+   .heading-3 , .heading-2 , .main-container , .btn-1 , .btn-2{
+    margin-left: 60px;
+   }
+   .btn-2{
+    margin-left: 0;
+   }
+   .image-style{
+    width: 100%;
+   }
+   
+  }
